# open5gs_abac

./: .gitmodules
lib/app/: ogs-app.h
lib/core/: meson.build
lib/sbi/openapi/model/: nf_type.h
misc/: 5GFarHash.puml  Interfaces.puml  make-certs.sh
src/: meson.build
src/abac/: abac-sm.c  abac-sm.h  app.c  attributes.json  certificat_authority.c  context.c  context.h  create_certificate.c  create_certificate.h  event.c  event.h  init.c  meson.build  nabac-handler.c  nabac-handler.h  pdp.c  pdp.h  pep-build.c  pep-build.h  pip-build.c  pip-build.h  pip-handler.c  pip-handler.h  sbi-path.c  sbi-path.h
